--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;1,300;1,400&display=swap');
-@import "slick-carousel/slick/slick.css"; 
+@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;1,300;1,400&display=swap");
+@import "slick-carousel/slick/slick.css";
 @import "slick-carousel/slick/slick-theme.css";
 @import "react-toastify/dist/ReactToastify.css";
 
 body {
-  font-family: 'Nunito', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: "Nunito", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+    "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   overflow-x: hidden;
 }
@@ -16,4 +16,28 @@ body {
 
 .product__cart:hover img + div {
   opacity: 0.05;
+}
+
+.dropdown__content {
+  display: none;
+  visibility: hidden;
+  opacity: 0;
+}
+
+.dropdown__trigger:hover > .dropdown__content {
+  display: block;
+  visibility: visible;
+  opacity: 1;
+  animation: pop-in 100ms cubic-bezier(0.2, 0, 0.38, 0.9) forwards;
+}
+
+@keyframes pop-in {
+  from {
+    opacity: 0;
+    transform: scale(0.9);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
 }
