--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -41,3 +41,46 @@ body {
     transform: scale(1);
   }
 }
+
+/*=================================================ADMIN LAYOUT===================================================*/
+.admin-aside__item:hover > div {
+  background-color: #244d4d;
+  color: white;
+}
+.admin-aside__item:hover > p {
+  color: #244d4d;
+}
+
+.admin-aside__item.active {
+  position: relative;
+}
+
+.admin-aside__item.active::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: #244d4d;
+  opacity: .05;
+  border-radius: 0 1rem 1rem 0;
+}
+
+.admin-aside__item.active::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 3px;
+  background-color: #244d4d;
+}
+
+.admin-aside__item.active > div {
+  background-color: #244d4d;
+  color: white;
+}
+.admin-aside__item.active > p {
+  color: #244d4d;
+}
